# two-dimensional-gasses

./: .gitignore  .readthedocs.yaml  Makefile  README.md  macros.tex  master.bib  master.tex
python/tdg/: CONTRIBUTORS  README.md  pyproject.toml  requirements.txt  setup.py
python/tdg/LICENSES/: README.md
python/tdg/docs/: Makefile  bibliography.rst  conf.py  contributors.rst  index.rst  license.rst  modules.rst  tdg.rst  todo.rst  version.rst
python/tdg/docs/benchmarks/: scaling.ipynb
python/tdg/docs/computational-narrative/: D4.rst  canonical-projection.rst  grand-canonical.rst  index.rst  many-body.rst  miscellanea.rst  monte-carlo.rst  observables.rst  parameters.rst  setup.rst  tuning.rst
python/tdg/docs/data-analysis/: analysis.rst  index.rst  io.rst  plot.rst
python/tdg/docs/examples/: HMC.ipynb  analysis.ipynb  autotuner.ipynb  ensemble-continuation.ipynb  ensemble-io.ipynb  ensemble.ipynb  hmc.ipynb  tuning.ipynb
python/tdg/docs/execution/: cli.rst  index.rst  logging.rst  timing.rst
python/tdg/docs/observables/: action.rst  contact.rst  currents.rst  custom-observables.rst  energy.rst  fermi.rst  index.rst  (+6 more)
python/tdg/examples/: HMC.ipynb  plot.py  tuning.ipynb
python/tdg/sanity-checks/: Untitled.ipynb  canonical-double-occupancy.py  h5-check.py  many-body-contact-comparison.ipynb  tuning-differentiate.py
python/tdg/tdg/: HMC.py  LegoSphere.py  Luescher.py  __init__.py  __main__.py  a1.py  action.py  canonical.py  conventions.py  ensemble.py  epsilon.py  ere.py  fermionMatrix.py  h5.py  lattice.py  license.py  meta.py  parameters.py  pauli.py  plot.py  potential.py  spacetime.py  symmetry.py  tuning.py  units.py
(+113 files in other folders)
