[project]

name = "tdg"
description = "Auxiliary field quantum monte carlo for 2D gasses"
version = "0.0.0"
authors = [
    { name = "Evan Berkowitz", email = "tdg@evanberkowitz.com" }
]

dependencies = [
    "torch==1.13.0",
    "functorch==1.13.0",
    "h5py==3.7.0",
    "matplotlib==3.5.2",
    "numpy==1.21.0",
    "tqdm==4.64",
    "sphinx-git==11.0.0",
    "sphinx-rtd-theme==1.1.0",
    "sphinxcontrib-bibtex==2.5.0",
]

[options]

install_requires = [
    ]
