[project]

name = "tdg"
description = "Auxiliary field quantum monte carlo for 2D gasses"
authors = [
    { name = "Evan Berkowitz", email = "tdg@evanberkowitz.com" }
]

dynamic = ["dependencies", "version"]

[options]

install_requires = [
    ]

[tool.setuptools]
py-modules = [
    "tdg",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

version = { attr = "tdg.meta.version" }
